# AV-ADAS_detection

./: .gitignore  CMakeLists.txt  Makefile  README.md  basira-main.cpp  main.cpp  model_training.ipynb  seqoutput.txt  speedLimit_training.ipynb
StopSpeedLimitModelDev/: requirements.txt
StopSpeedLimitModelDev/combined/: data.yaml
Stop_runs/detect/lisa_stop_yolo11s_fineTuned/: args.yaml  results.csv
app/: frameProcessor.cpp  frameProcessor.h  main.cpp
config/: roi_config.yaml
models/: README.md  build_engine.sh  export_onnx.py
runs/detect/speedlimit_yolo11s/: results.csv
runs_speedLimit/detect/speedlimit_yolo11s/: args.yaml
scripts/: analyze_fps.py  extract-frames.sh  run-and-get-results.sh  run-ld-only.sh  run-ld.sh
src/: detector_class.h
src/lane/: LaneDetect.cpp  LaneDetect.h
src/pedestrian/: PedestrianDetector.cpp  PedestrianDetector.h
src/stop_speedLimit/: stopSignDetector.cpp  stopSignDetector.h  yoloDetector.cpp  yoloDetector.h
